--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,79 @@
-
-.topnav-right {
-    overflow: hidden;
-    background-color: #333;
-    float:right;
+aside{
+  margin: none;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  background-color: #333;
 }
+ 
+ 
 
 .topnav-right a{
-    float: left;
+    float:right;
     text-align: center;
-    padding-right: 50px;
+    padding-right: 20px;
+    color: grey;
+    font-family: sans-serif;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 15px;
 }
+.topnav-right button{
+    float:right;
+}
+.topnav-left a{
+    float:left;
+    margin-top: 20px;
+}
+.topnav-left a{
+    margin-top: 20px;
+    text-align: center;
+    padding-right: 20px;
+    color: white;
+    font-family: sans-serif;
+    text-decoration: none;
+    font-size: 15px;
+}
+.topnav-left a:hover {
+    background-color: #ddd;
+    color: black;
+  }
 
 .topnav-right a:hover {
     background-color: #ddd;
     color: black;
+  }
+form.example input[type=text] {
+    padding: 10px;
+    position: relative;
+    box-sizing: border-box;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    height: 20px;
+    background: #f1f1f1;
+  }
+form.example button {
+    float: left;
+    box-sizing: border-box;
+    width: 20%;
+    height: 20px;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+  }
+  p1, p2{
+    font-size: 100%;
+    width: 100%;
+    text-align: left;
+    font-family: sans-serif;
+  }
+  .column {
+    float: left;
+    width: 25%;
+    padding: 5px;
   }
