--- a/my  website/giet website/Phphub/css/style1.css
+++ b/my  website/giet website/Phphub/css/style1.css
@@ -26,7 +26,7 @@
 
 
 		body{
-        background-image:url("https://image.freepik.com/free-photo/book-with-green-board-background_1150-3836.jpg ");
+        background-image:url( https://i.ytimg.com/vi/4l6J5jhRgos/maxresdefault.jpg);
         background-repeat: no-repeat;
         height:100%;
         background-position: center;
@@ -52,7 +52,7 @@ position:absolute;
 /* Add a dark background color with a little bit see-through */ 
 .navbar {
     margin-bottom: 0;
-    background-color: #2d2d30;
+    background-color: black;
     border: 10;
     font-size: 13px !important;
     letter-spacing: 3px;
@@ -136,3 +136,7 @@ top:30px;
     width:30%;
     position:relative;
 }
+.section{
+    font color="white";
+}
+ 
