--- a/my  website/giet website/Phphub/css/style1.css
+++ b/my  website/giet website/Phphub/css/style1.css
@@ -3,7 +3,7 @@
   
    
     width: 100%; 
-    margin: auto;
+    margin-top: auto;
 }
 .nav-pills{
     color:maroon;
@@ -137,6 +137,9 @@ top:30px;
     position:relative;
 }
 .section{
-    font color="white";
+    font color ="white";
 }
- 
+
+.item active{
+    margin-top: 0;
+}
